--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" async></script>
     <title>Quiz JS</title>
 </head>
 <body>
     <div class="container">
-        <div class="questions-container">
-            <span class="question"></span>
+        <div class="questions-container hide">
+
+            <span class="question">Pergunta</span>
             <div class="answers-container">
-                <button class="answer-btn">Resposta</button>
-                <button class="answer-btn">Resposta</button>
-                <button class="answer-btn">Resposta</button>
-                <button class="answer-btn">Resposta</button>
+                <button class="answer button">Resposta1</button>
+                <button class="answer button">Resposta2</button>
+                <button class="answer button">Resposta3</button>
+                <button class="answer button">Resposta4</button>
             </div>
         </div>
-        <div class="constrols-container">
-            <button class="start-quiz-btn">Iniciar Quiz!</button>
-            <button class="next-question-btn">Próxima pergunta</button>
+        <div class="constrols-container-hide">
+            <button class="start-quiz button">Iniciar Quiz!</button>
+            <button class="next-question button hide">Próxima pergunta</button>
         </div>
     </div>
 </body>
